@@ -15,7 +15,7 @@
  * along with DrFTPD; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-package net.sf.drftpd.event.listeners;
+package org.drftpd.plugins;
 
 import f00f.net.irc.martyr.GenericCommandAutoService;
 import f00f.net.irc.martyr.InCommand;
@@ -32,7 +32,6 @@ import org.apache.log4j.Logger;
 
 import org.drftpd.PropertyHelper;
 import org.drftpd.master.ConnectionManager;
-import org.drftpd.plugins.SiteBot;
 
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
@@ -45,7 +44,7 @@ import java.util.Properties;
 
 /**
  * @author zubov
- * @version $Id$
+ * @version $Id: PreTime.java 806 2004-11-17 22:29:13Z mog $
  */
 public class PreTime implements FtpListener {
     private static final Logger logger = Logger.getLogger(PreTime.class);
